--- a/index.html
+++ b/index.html
@@ -4,102 +4,168 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- css -->
     <link rel="stylesheet" href="/css/bootstrap.min.css">
+
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
     <title>Document</title>
 </head>
 
 <body>
 
-    <nav class="navbar bg-body-tertiary">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="#">
-                <img src="/img/Logo Dwisma.png" alt="Logo" width="30" height="30" class="d-inline-block align-text-top">
-            </a>
-        </div>
-    </nav>
-
+    <!-- Body -->
     <div class="container mt-5">
-        <h1 class="text-center">Pemilihan Mapel</h1>
-        <table class="table">
-            <tr>
-                <th>Pilihan Mapel</th>
-                <th>Daftar Mapel</th>
-                <th>Kuota</th>
-                <th>Daftar</th>
-            </tr>
-            <tr>
-                <td>1</td>
-                <td>
-                    <ul>
-                        <li>Matematika Tingkat Lanjut</li>
-                        <li>Ekonomi</li>
-                        <li>Fisika</li>
-                        <li>Kimia</li>
-                        <li>Biologi</li>
-                    </ul>
-                </td>
-                <td>108 Siswa</td>
-                <td><a href="https://forms.gle/gLk5HwjK9g2EwPsv6" type="button" class="btn btn-success">Daftar</a></td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>
-                    <ul>
-                        <li>Matematika Tingkat Lanjut</li>
-                        <li>Ekonomi</li>
-                        <li>Fisika</li>
-                        <li>Informatika</li>
-                        <li>Kimia</li>
-                    </ul>
-                </td>
-                <td>72 Siswa</td>
-                <td><a href="https://forms.gle/wuURzi7UnJ465p1J9" type="button" class="btn btn-success">Daftar</a></td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>
-                    <ul>
-                        <li>Informatika</li>
-                        <li>Ekonomi</li>
-                        <li>Geografi</li>
-                        <li>Sejarah Tingkat Lanjut</li>
-                        <li>Bahasa Jepang</li>
-                    </ul>
-                </td>
-                <td>72 Siswa</td>
-                <td><a href="https://forms.gle/s66twqX6wEkoG3oo7" type="button" class="btn btn-success">Daftar</a></td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>
-                    <ul>
-                        <li>Matematika Tingkat Lanjut</li>
-                        <li>Ekonomi</li>
-                        <li>Sosiologi</li>
-                        <li>Geografi</li>
-                        <li>Sejarah Tingkat Lanjut</li>
-                    </ul>
-                </td>
-                <td>36 Siswa</td>
-                <td><a href="https://forms.gle/TPQ5CA8u2Gtvja288" type="button" class="btn btn-success">Daftar</a></td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>
-                    <ul>
-                        <li>Bahasa Inggris Tingkat Lanjut</li>
-                        <li>Ekonomi</li>
-                        <li>Bahasa Indonesia Tingkat Lanjut</li>
-                        <li>Bahasa Jepang</li>
-                        <li>Antropologi</li>
-                    </ul>
-                </td>
-                <td>36 Siswa</td>
-                <td><a href="https://forms.gle/ZbqDwA5yDQ7KPt6y7" type="button" class="btn btn-success">Daftar</a></td>
-            </tr>
-        </table>
+
+        <!-- logo -->
+        <div class="text-center">
+            <img src="/img/Logo Dwisma.png" alt="" width="30%">
+        </div>
+
+        <!-- Judul -->
+        <h1 class="text-center mt-5">Pemilihan Mata Pelajaran</h1>
+        <h3 class="text-center">Tahun Ajaran 2025/2026</h3>
+
+        <!-- Ketentuan -->
+        <div class="card mt-5">
+            <div class="card-header text-center fw-bold">
+                <img src="https://logowik.com/content/uploads/images/warning6444.logowik.com.webp" alt="" width="20%">
+                <h4 class="mt-4">Syarat & Ketentuan Dalam Memilih Mata Pelajaran</h4>
+            </div>
+            <div class="card-body">
+                <ol>
+                    <li class="mt-2">Setiap siswa wajib memilih <b>satu kelompok mapel !</b>
+                    <li class="mt-2">Pemilihan atau pengisian angket hanya bisa dilakukan sekali !</li>
+                    <li class="mt-2">Apabila siswa terdata <b>memilih lebih dari satu kelompok mapel</b> maka pilihan
+                        mapel akan
+                        disesuaikan
+                        dengan kuota kelompok
+                        mapel yang kurang !</li>
+                    <li class="mt-2">Penetapan pemenuhan kuota berdasarkan rangking waktu pengisian angket dan apabila
+                        dalam kelompok
+                        mapel tertentu telah
+                        terpenuhi dan masih terdapat peminat maka akan dialihkan ke kelompok mapel yang lainnya !</li>
+                    <li class="mt-2">Sebelum mengklik tombol daftar pada bagian bawah halaman, diharapkan siswa mengecek
+                        NISN melali
+                        tombol di bawah ini!</li>
+                </ol>
+                <a href="https://nisn.data.kemdikbud.go.id/" class="btn btn-primary">Cek NISN</a>
+            </div>
+        </div>
+
+        <!-- Pilihan -->
+        <div class="table mt-5">
+            <table class="table">
+                <tr>
+                    <th>Pilihan Mapel</th>
+                    <th>Daftar Mapel</th>
+                    <th>Kuota</th>
+                    <th>Daftar</th>
+                </tr>
+                <tr>
+                    <td>1</td>
+                    <td>
+                        <ul>
+                            <li>Matematika Tingkat Lanjut</li>
+                            <li>Ekonomi</li>
+                            <li>Fisika</li>
+                            <li>Kimia</li>
+                            <li>Biologi</li>
+                        </ul>
+                    </td>
+                    <td>108 Siswa</td>
+                    <td><a href="https://forms.gle/gLk5HwjK9g2EwPsv6" type="button" class="btn btn-success">Daftar</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>
+                        <ul>
+                            <li>Matematika Tingkat Lanjut</li>
+                            <li>Ekonomi</li>
+                            <li>Fisika</li>
+                            <li>Informatika</li>
+                            <li>Kimia</li>
+                        </ul>
+                    </td>
+                    <td>72 Siswa</td>
+                    <td><a href="https://forms.gle/wuURzi7UnJ465p1J9" type="button" class="btn btn-success">Daftar</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>
+                        <ul>
+                            <li>Informatika</li>
+                            <li>Ekonomi</li>
+                            <li>Geografi</li>
+                            <li>Sejarah Tingkat Lanjut</li>
+                            <li>Bahasa Jepang</li>
+                        </ul>
+                    </td>
+                    <td>72 Siswa</td>
+                    <td><a href="https://forms.gle/s66twqX6wEkoG3oo7" type="button" class="btn btn-success">Daftar</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>
+                        <ul>
+                            <li>Matematika Tingkat Lanjut</li>
+                            <li>Ekonomi</li>
+                            <li>Sosiologi</li>
+                            <li>Geografi</li>
+                            <li>Sejarah Tingkat Lanjut</li>
+                        </ul>
+                    </td>
+                    <td>36 Siswa</td>
+                    <td><a href="https://forms.gle/TPQ5CA8u2Gtvja288" type="button" class="btn btn-success">Daftar</a>
+                    </td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>
+                        <ul>
+                            <li>Bahasa Inggris Tingkat Lanjut</li>
+                            <li>Ekonomi</li>
+                            <li>Bahasa Indonesia Tingkat Lanjut</li>
+                            <li>Bahasa Jepang</li>
+                            <li>Antropologi</li>
+                        </ul>
+                    </td>
+                    <td>36 Siswa</td>
+                    <td><a href="https://forms.gle/ZbqDwA5yDQ7KPt6y7" type="button" class="btn btn-success">Daftar</a>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </div>
 
+    <!-- Footer -->
+    <nav class="navbar navbar-expand-lg bg-body-tertiary mt-5">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="https://sman2mengwi.sch.id/" target="_blank"><img src="/img/Logo Dwisma.png"
+                    width="50" height="50"></a>
+            <a class="navbar-brand" href="https://sman2mengwi.sch.id/" target="_blank"><b>dwisma.id</b> | SMAN 2
+                Mengwi</a>
+            <div class="navbar-collapse">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link"
+                            href="https://www.youtube.com/channel/UCz6SfxL3mwHP1Xjz_JvBqvg" target="_blank"><i
+                                class="bi bi-youtube m-1"></i>official
+                            dwisma</a></li>
+                    <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/osisdwisma"
+                            target="_blank"><i class="bi bi-instagram m-1"></i>osisdwisma</a>
+                    </li>
+                    <li class="nav-item"><a class="nav-link" href="https://web.facebook.com/SMAN2MENGWI"
+                            target="_blank"><i class="bi bi-facebook m-1"></i>SMAN 2
+                            Mengwi</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 </body>
 
 </html>
