--- a/index.html
+++ b/index.html
@@ -30,28 +30,35 @@
 
         <!-- Ketentuan -->
         <div class="card mt-5">
-            <div class="card-header text-center fw-bold">
-                <img src="https://logowik.com/content/uploads/images/warning6444.logowik.com.webp" alt="" width="20%">
-                <h4 class="mt-4">Syarat & Ketentuan Dalam Memilih Mata Pelajaran</h4>
+            <div class="card-header text-center fw-bold text-bg-warning">
+                <h4 class="m-3">Syarat & Ketentuan Dalam Memilih Mata Pelajaran</h4>
             </div>
             <div class="card-body">
                 <ol>
-                    <li class="mt-2">Setiap siswa wajib memilih <b>satu kelompok mapel !</b>
-                    <li class="mt-2">Pemilihan atau pengisian angket hanya bisa dilakukan sekali !</li>
-                    <li class="mt-2">Apabila siswa terdata <b>memilih lebih dari satu kelompok mapel</b> maka pilihan
+                    <li class="mt-2">Siswa mengisi link daftar menggunakan akun belajar.id !</li>
+                    <li class="mt-2">Apabila siswa belum memiliki akun belajar.id silahkan hubungi admin di sekolah !
+                    </li>
+                    <li class="mt-2">Siswa hanya bisa memilih <b>satu kelompok mapel,</b> melalui tombol daftar di bawah
+                        !
+                    <li class="mt-2">Pemilihan atau pengisian angket hanya bisa dilakukan <b>satu kali !</b></li>
+                    <li class="mt-2">Apabila siswa <b>memilih lebih dari satu kelompok mapel</b> maka pilihan
                         mapel akan
                         disesuaikan
                         dengan kuota kelompok
-                        mapel yang kurang !</li>
-                    <li class="mt-2">Penetapan pemenuhan kuota berdasarkan rangking waktu pengisian angket dan apabila
+                        mapel yang masih kurang !</li>
+                    <li class="mt-2">Penetapan pemenuhan kuota berdasarkan waktu pengisian angket dan apabila
                         dalam kelompok
                         mapel tertentu telah
                         terpenuhi dan masih terdapat peminat maka akan dialihkan ke kelompok mapel yang lainnya !</li>
                     <li class="mt-2">Sebelum mengklik tombol daftar pada bagian bawah halaman, diharapkan siswa mengecek
-                        NISN melali
-                        tombol di bawah ini!</li>
+                        NISN melalui
+                        tombol di bawah ini untuk diisikan di dalam formulir !</li>
                 </ol>
-                <a href="https://nisn.data.kemdikbud.go.id/" class="btn btn-primary">Cek NISN</a>
+            </div>
+            <div class="card-footer">
+                <div class="text-start"><a href="https://nisn.data.kemdikbud.go.id/" class="btn btn-primary"
+                        target="_blank">Cek
+                        NISN <i class="bi bi-exclamation-circle-fill"></i></a></div>
             </div>
         </div>
 
