--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 
-    <title>Document</title>
+    <title>Pemilihan Mata Pelajaran Tahun Ajaran 2024/2025</title>
 </head>
 
 <body>
