--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="dark">
 
 <head>
     <meta charset="UTF-8">
@@ -30,7 +30,7 @@
 
         <!-- Ketentuan -->
         <div class="card mt-5">
-            <div class="card-header text-center fw-bold text-bg-warning">
+            <div class="card-header text-center fw-bold">
                 <h4 class="m-3">Syarat & Ketentuan Dalam Memilih Mata Pelajaran</h4>
             </div>
             <div class="card-body">
