--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" data-bs-theme="dark">
+<html lang="en" data-bs-theme="light">
 
 <head>
     <meta charset="UTF-8">
@@ -16,143 +16,185 @@
 
 <body>
 
-    <!-- Body -->
+    <!-- nav -->
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
+        <div class="container">
+            <a class="navbar-brand"><img src="/img/Logo Dwisma.png" alt="logo" width="40"></a>
+            <a class="navbar-brand fw-bold" href="#">SMAN 2 MENGWI</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                <div class="navbar-nav ms-auto">
+                    <a class="nav-link active" aria-current="page" href="#home">Beranda</a>
+                    <a class="nav-link" href="#ketentuan">Syarat</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Isi -->
     <div class="container mt-5">
 
         <!-- logo -->
-        <div class="text-center">
-            <img src="/img/Logo Dwisma.png" alt="" width="30%">
+        <div class="text-center" id="home">
+            <img src="/img/kolase-logo-kurikulum-merdeka-kemdikbud_ratio-16x9.png" alt="" width="100%">
         </div>
 
         <!-- Judul -->
-        <h1 class="text-center mt-5">Pemilihan Mata Pelajaran</h1>
+        <h1 class="text-center mt-5 fw-bolder">Pemilihan Mata Pelajaran</h1>
         <h3 class="text-center">Tahun Ajaran 2025/2026</h3>
 
         <!-- Ketentuan -->
-        <div class="card mt-5">
-            <div class="card-header text-center fw-bold">
-                <h4 class="m-3">Syarat & Ketentuan Dalam Memilih Mata Pelajaran</h4>
+        <div class="card mt-5" id="ketentuan">
+            <div class="card-header text-center fw-bold bg-warning">
+                <h4 class="m-3 fw-bold">Syarat & Ketentuan Dalam Memilih Mata Pelajaran</h4>
             </div>
-            <div class="card-body">
+            <div class="card-body p-2">
                 <ol>
-                    <li class="mt-2">Siswa mengisi link daftar menggunakan akun belajar.id !</li>
-                    <li class="mt-2">Apabila siswa belum memiliki akun belajar.id silahkan hubungi admin di sekolah !
-                    </li>
-                    <li class="mt-2">Siswa hanya bisa memilih <b>satu kelompok mapel,</b> melalui tombol daftar di bawah
+                    <li class="mt-2 fw-bold">Siswa mengisi link daftar menggunakan akun belajar.id !</li>
+                    <li class="mt-2 fw-bold">Apabila siswa belum memiliki akun belajar.id silahkan hubungi admin di
+                        sekolah
                         !
-                    <li class="mt-2">Pemilihan atau pengisian angket hanya bisa dilakukan <b>satu kali !</b></li>
-                    <li class="mt-2">Apabila siswa <b>memilih lebih dari satu kelompok mapel</b> maka pilihan
+                    </li>
+                    <li class="mt-2 fw-bold">Siswa hanya bisa memilih satu kelompok mapel, melalui tombol daftar di
+                        bawah
+                        !
+                    <li class="mt-2 fw-bold">Pemilihan atau pengisian angket hanya bisa dilakukan satu kali !</li>
+                    <li class="mt-2 fw-bold">Apabila siswa memilih lebih dari satu kelompok mapel maka pilihan
                         mapel akan
                         disesuaikan
                         dengan kuota kelompok
                         mapel yang masih kurang !</li>
-                    <li class="mt-2">Penetapan pemenuhan kuota berdasarkan waktu pengisian angket dan apabila
+                    <li class="mt-2 fw-bold">Penetapan pemenuhan kuota berdasarkan waktu pengisian angket dan apabila
                         dalam kelompok
                         mapel tertentu telah
-                        terpenuhi dan masih terdapat peminat maka akan dialihkan ke kelompok mapel yang lainnya !</li>
-                    <li class="mt-2">Sebelum mengklik tombol daftar pada bagian bawah halaman, diharapkan siswa mengecek
+                        terpenuhi dan masih terdapat peminat maka akan dialihkan ke kelompok mapel yang lainnya !
+                    </li>
+                    <li class="mt-2 fw-bold">Sebelum mengklik tombol pilih mata pelajaran pada bagian bawah halaman,
+                        diharapkan
+                        siswa
+                        mengecek
                         NISN melalui
                         tombol di bawah ini untuk diisikan di dalam formulir !</li>
                 </ol>
             </div>
             <div class="card-footer">
-                <div class="text-start"><a href="https://nisn.data.kemdikbud.go.id/" class="btn btn-primary"
+                <div class="text-center"><a href="https://nisn.data.kemdikbud.go.id/" class="btn btn-primary mx-2"
                         target="_blank">Cek
-                        NISN <i class="bi bi-exclamation-circle-fill"></i></a></div>
+                        NISN</a>
+                    <a class="btn btn-success" data-bs-toggle="collapse" href="#collapseExample" role="button"
+                        aria-expanded="false" aria-controls="collapseExample">
+                        Pilih Mata Pelajaran
+                    </a>
+                </div>
             </div>
         </div>
 
         <!-- Pilihan -->
-        <div class="table mt-5">
-            <table class="table">
-                <tr>
-                    <th>Pilihan Mapel</th>
-                    <th>Daftar Mapel</th>
-                    <th>Kuota</th>
-                    <th>Daftar</th>
-                </tr>
-                <tr>
-                    <td>1</td>
-                    <td>
-                        <ul>
-                            <li>Matematika Tingkat Lanjut</li>
-                            <li>Ekonomi</li>
-                            <li>Fisika</li>
-                            <li>Kimia</li>
-                            <li>Biologi</li>
-                        </ul>
-                    </td>
-                    <td>108 Siswa</td>
-                    <td><a href="https://forms.gle/gLk5HwjK9g2EwPsv6" type="button" class="btn btn-success">Daftar</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>
-                        <ul>
-                            <li>Matematika Tingkat Lanjut</li>
-                            <li>Ekonomi</li>
-                            <li>Fisika</li>
-                            <li>Informatika</li>
-                            <li>Kimia</li>
-                        </ul>
-                    </td>
-                    <td>72 Siswa</td>
-                    <td><a href="https://forms.gle/wuURzi7UnJ465p1J9" type="button" class="btn btn-success">Daftar</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>
-                        <ul>
-                            <li>Informatika</li>
-                            <li>Ekonomi</li>
-                            <li>Geografi</li>
-                            <li>Sejarah Tingkat Lanjut</li>
-                            <li>Bahasa Jepang</li>
-                        </ul>
-                    </td>
-                    <td>72 Siswa</td>
-                    <td><a href="https://forms.gle/s66twqX6wEkoG3oo7" type="button" class="btn btn-success">Daftar</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>
-                        <ul>
-                            <li>Matematika Tingkat Lanjut</li>
-                            <li>Ekonomi</li>
-                            <li>Sosiologi</li>
-                            <li>Geografi</li>
-                            <li>Sejarah Tingkat Lanjut</li>
-                        </ul>
-                    </td>
-                    <td>36 Siswa</td>
-                    <td><a href="https://forms.gle/TPQ5CA8u2Gtvja288" type="button" class="btn btn-success">Daftar</a>
-                    </td>
-                </tr>
-                <tr>
-                    <td>5</td>
-                    <td>
-                        <ul>
-                            <li>Bahasa Inggris Tingkat Lanjut</li>
-                            <li>Ekonomi</li>
-                            <li>Bahasa Indonesia Tingkat Lanjut</li>
-                            <li>Bahasa Jepang</li>
-                            <li>Antropologi</li>
-                        </ul>
-                    </td>
-                    <td>36 Siswa</td>
-                    <td><a href="https://forms.gle/ZbqDwA5yDQ7KPt6y7" type="button" class="btn btn-success">Daftar</a>
-                    </td>
-                </tr>
-            </table>
+        <div class="m-5 text-center">
+
+        </div>
+        <div class="collapse" id="collapseExample">
+            <div class="card card-body">
+                <div class="table mt-5" id="mapel">
+                    <table class="table">
+                        <tr>
+                            <th>Pilihan Mapel</th>
+                            <th>Daftar Mapel</th>
+                            <th>Kuota</th>
+                            <th>Daftar</th>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>
+                                <ul>
+                                    <li>Matematika Tingkat Lanjut</li>
+                                    <li>Ekonomi</li>
+                                    <li>Fisika</li>
+                                    <li>Kimia</li>
+                                    <li>Biologi</li>
+                                </ul>
+                            </td>
+                            <td>108 Siswa</td>
+                            <td><a href="https://forms.gle/gLk5HwjK9g2EwPsv6" type="button"
+                                    class="btn btn-success">Daftar</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>2</td>
+                            <td>
+                                <ul>
+                                    <li>Matematika Tingkat Lanjut</li>
+                                    <li>Ekonomi</li>
+                                    <li>Fisika</li>
+                                    <li>Informatika</li>
+                                    <li>Kimia</li>
+                                </ul>
+                            </td>
+                            <td>72 Siswa</td>
+                            <td><a href="https://forms.gle/wuURzi7UnJ465p1J9" type="button"
+                                    class="btn btn-success">Daftar</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>3</td>
+                            <td>
+                                <ul>
+                                    <li>Informatika</li>
+                                    <li>Ekonomi</li>
+                                    <li>Geografi</li>
+                                    <li>Sejarah Tingkat Lanjut</li>
+                                    <li>Bahasa Jepang</li>
+                                </ul>
+                            </td>
+                            <td>72 Siswa</td>
+                            <td><a href="https://forms.gle/s66twqX6wEkoG3oo7" type="button"
+                                    class="btn btn-success">Daftar</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>4</td>
+                            <td>
+                                <ul>
+                                    <li>Matematika Tingkat Lanjut</li>
+                                    <li>Ekonomi</li>
+                                    <li>Sosiologi</li>
+                                    <li>Geografi</li>
+                                    <li>Sejarah Tingkat Lanjut</li>
+                                </ul>
+                            </td>
+                            <td>36 Siswa</td>
+                            <td><a href="https://forms.gle/TPQ5CA8u2Gtvja288" type="button"
+                                    class="btn btn-success">Daftar</a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>5</td>
+                            <td>
+                                <ul>
+                                    <li>Bahasa Inggris Tingkat Lanjut</li>
+                                    <li>Ekonomi</li>
+                                    <li>Bahasa Indonesia Tingkat Lanjut</li>
+                                    <li>Bahasa Jepang</li>
+                                    <li>Antropologi</li>
+                                </ul>
+                            </td>
+                            <td>36 Siswa</td>
+                            <td><a href="https://forms.gle/ZbqDwA5yDQ7KPt6y7" type="button"
+                                    class="btn btn-success">Daftar</a>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
 
     <!-- Footer -->
-    <nav class="navbar navbar-expand-lg bg-body-tertiary mt-5">
-        <div class="container-fluid">
+    <nav class="navbar navbar-expand-lg mt-5 shadow-sm bg-primary navbar-dark">
+        <div class="container">
             <a class="navbar-brand" href="https://sman2mengwi.sch.id/" target="_blank"><img src="/img/Logo Dwisma.png"
                     width="50" height="50"></a>
             <a class="navbar-brand" href="https://sman2mengwi.sch.id/" target="_blank"><b>dwisma.id</b> | SMAN 2
@@ -173,6 +215,14 @@
             </div>
         </div>
     </nav>
+
+    <!-- javascipt -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
