--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <div class="text-center"><a href="https://nisn.data.kemdikbud.go.id/" class="btn btn-primary mx-2"
                         target="_blank">Cek
                         NISN</a>
-                    <a class="btn btn-success" data-bs-toggle="collapse" href="#collapseExample" role="button"
-                        aria-expanded="false" aria-controls="collapseExample">
+                    <a class="btn btn-success disabled" aria-disabled="true" data-bs-toggle="collapse"
+                        href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                         Pilih Mata Pelajaran
                     </a>
                 </div>
@@ -97,97 +97,95 @@
 
         </div>
         <div class="collapse" id="collapseExample">
-            <div class="card card-body">
-                <div class="table mt-5" id="mapel">
-                    <table class="table">
-                        <tr>
-                            <th>Pilihan Mapel</th>
-                            <th>Daftar Mapel</th>
-                            <th>Kuota</th>
-                            <th>Daftar</th>
-                        </tr>
-                        <tr>
-                            <td>1</td>
-                            <td>
-                                <ul>
-                                    <li>Matematika Tingkat Lanjut</li>
-                                    <li>Ekonomi</li>
-                                    <li>Fisika</li>
-                                    <li>Kimia</li>
-                                    <li>Biologi</li>
-                                </ul>
-                            </td>
-                            <td>108 Siswa</td>
-                            <td><a href="https://forms.gle/gLk5HwjK9g2EwPsv6" type="button"
-                                    class="btn btn-success">Daftar</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>2</td>
-                            <td>
-                                <ul>
-                                    <li>Matematika Tingkat Lanjut</li>
-                                    <li>Ekonomi</li>
-                                    <li>Fisika</li>
-                                    <li>Informatika</li>
-                                    <li>Kimia</li>
-                                </ul>
-                            </td>
-                            <td>72 Siswa</td>
-                            <td><a href="https://forms.gle/wuURzi7UnJ465p1J9" type="button"
-                                    class="btn btn-success">Daftar</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>3</td>
-                            <td>
-                                <ul>
-                                    <li>Informatika</li>
-                                    <li>Ekonomi</li>
-                                    <li>Geografi</li>
-                                    <li>Sejarah Tingkat Lanjut</li>
-                                    <li>Bahasa Jepang</li>
-                                </ul>
-                            </td>
-                            <td>72 Siswa</td>
-                            <td><a href="https://forms.gle/s66twqX6wEkoG3oo7" type="button"
-                                    class="btn btn-success">Daftar</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>4</td>
-                            <td>
-                                <ul>
-                                    <li>Matematika Tingkat Lanjut</li>
-                                    <li>Ekonomi</li>
-                                    <li>Sosiologi</li>
-                                    <li>Geografi</li>
-                                    <li>Sejarah Tingkat Lanjut</li>
-                                </ul>
-                            </td>
-                            <td>36 Siswa</td>
-                            <td><a href="https://forms.gle/TPQ5CA8u2Gtvja288" type="button"
-                                    class="btn btn-success">Daftar</a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>5</td>
-                            <td>
-                                <ul>
-                                    <li>Bahasa Inggris Tingkat Lanjut</li>
-                                    <li>Ekonomi</li>
-                                    <li>Bahasa Indonesia Tingkat Lanjut</li>
-                                    <li>Bahasa Jepang</li>
-                                    <li>Antropologi</li>
-                                </ul>
-                            </td>
-                            <td>36 Siswa</td>
-                            <td><a href="https://forms.gle/ZbqDwA5yDQ7KPt6y7" type="button"
-                                    class="btn btn-success">Daftar</a>
-                            </td>
-                        </tr>
-                    </table>
-                </div>
+            <div class="table" id="mapel">
+                <table class="table">
+                    <tr>
+                        <th>Pilihan Mapel</th>
+                        <th>Daftar Mapel</th>
+                        <th>Kuota</th>
+                        <th>Daftar</th>
+                    </tr>
+                    <tr>
+                        <td>1</td>
+                        <td>
+                            <ul>
+                                <li>Matematika Tingkat Lanjut</li>
+                                <li>Ekonomi</li>
+                                <li>Fisika</li>
+                                <li>Kimia</li>
+                                <li>Biologi</li>
+                            </ul>
+                        </td>
+                        <td>108 Siswa</td>
+                        <td><a href="https://forms.gle/gLk5HwjK9g2EwPsv6" type="button"
+                                class="btn btn-success">Daftar</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>2</td>
+                        <td>
+                            <ul>
+                                <li>Matematika Tingkat Lanjut</li>
+                                <li>Ekonomi</li>
+                                <li>Fisika</li>
+                                <li>Informatika</li>
+                                <li>Kimia</li>
+                            </ul>
+                        </td>
+                        <td>72 Siswa</td>
+                        <td><a href="https://forms.gle/wuURzi7UnJ465p1J9" type="button"
+                                class="btn btn-success">Daftar</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>3</td>
+                        <td>
+                            <ul>
+                                <li>Informatika</li>
+                                <li>Ekonomi</li>
+                                <li>Geografi</li>
+                                <li>Sejarah Tingkat Lanjut</li>
+                                <li>Bahasa Jepang</li>
+                            </ul>
+                        </td>
+                        <td>72 Siswa</td>
+                        <td><a href="https://forms.gle/s66twqX6wEkoG3oo7" type="button"
+                                class="btn btn-success">Daftar</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>4</td>
+                        <td>
+                            <ul>
+                                <li>Matematika Tingkat Lanjut</li>
+                                <li>Ekonomi</li>
+                                <li>Sosiologi</li>
+                                <li>Geografi</li>
+                                <li>Sejarah Tingkat Lanjut</li>
+                            </ul>
+                        </td>
+                        <td>36 Siswa</td>
+                        <td><a href="https://forms.gle/TPQ5CA8u2Gtvja288" type="button"
+                                class="btn btn-success">Daftar</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>5</td>
+                        <td>
+                            <ul>
+                                <li>Bahasa Inggris Tingkat Lanjut</li>
+                                <li>Ekonomi</li>
+                                <li>Bahasa Indonesia Tingkat Lanjut</li>
+                                <li>Bahasa Jepang</li>
+                                <li>Antropologi</li>
+                            </ul>
+                        </td>
+                        <td>36 Siswa</td>
+                        <td><a href="https://forms.gle/ZbqDwA5yDQ7KPt6y7" type="button"
+                                class="btn btn-success">Daftar</a>
+                        </td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
