--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>
             <div class="card-body p-2">
                 <ol>
-                    <li class="mt-2 fw-bold">Siswa mengisi link daftar menggunakan akun belajar.id !</li>
+                    <li class="mt-2 fw-bold">Siswa mengisi link daftar menggunakan akun gmail !</li>
                     <li class="mt-2 fw-bold">Apabila siswa belum memiliki akun belajar.id silahkan hubungi admin di
                         sekolah
                         !
