--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
                 <div class="text-center"><a href="https://nisn.data.kemdikbud.go.id/" class="btn btn-primary mx-2"
                         target="_blank">Cek
                         NISN</a>
-                    <a class="btn btn-success disabled" aria-disabled="true" data-bs-toggle="collapse"
-                        href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                    <a class="btn btn-success" data-bs-toggle="collapse" href="#collapseExample" role="button"
+                        aria-expanded="false" aria-controls="collapseExample">
                         Pilih Mata Pelajaran
                     </a>
                 </div>
