--- a/index.html
+++ b/index.html
@@ -54,11 +54,8 @@
             <div class="card-body p-2">
                 <ol>
                     <li class="mt-2 fw-bold">Siswa mengisi link daftar menggunakan akun gmail !</li>
-                    <li class="mt-2 fw-bold">Apabila siswa belum memiliki akun belajar.id silahkan hubungi admin di
-                        sekolah
-                        !
-                    </li>
-                    <li class="mt-2 fw-bold">Siswa hanya bisa memilih satu kelompok mapel, melalui tombol daftar di
+                    <li class="mt-2 fw-bold">Siswa hanya bisa memilih satu kelompok mapel, melalui tombol pilih mata
+                        pelajaran di
                         bawah
                         !
                     <li class="mt-2 fw-bold">Pemilihan atau pengisian angket hanya bisa dilakukan satu kali !</li>
@@ -67,10 +64,9 @@
                         disesuaikan
                         dengan kuota kelompok
                         mapel yang masih kurang !</li>
-                    <li class="mt-2 fw-bold">Penetapan pemenuhan kuota berdasarkan waktu pengisian angket dan apabila
-                        dalam kelompok
-                        mapel tertentu telah
-                        terpenuhi dan masih terdapat peminat maka akan dialihkan ke kelompok mapel yang lainnya !
+                    <li class="mt-2 fw-bold">Penetapan pemenuhan kuota berdasarkan pengisian angket oleh siswa dan
+                        apabila dalam kelompok mapel tertentu telah terpenuhi dan masih terdapat peminat maka mohon
+                        menghubungi guru BK !
                     </li>
                     <li class="mt-2 fw-bold">Sebelum mengklik tombol pilih mata pelajaran pada bagian bawah halaman,
                         diharapkan
