--- a/index.html
+++ b/index.html
@@ -72,14 +72,11 @@
                         diharapkan
                         siswa
                         mengecek
-                        NISN melalui
-                        tombol di bawah ini untuk diisikan di dalam formulir !</li>
+                        NISN !</li>
                 </ol>
             </div>
             <div class="card-footer">
-                <div class="text-center"><a href="https://nisn.data.kemdikbud.go.id/" class="btn btn-primary mx-2"
-                        target="_blank">Cek
-                        NISN</a>
+                <div class="text-center">
                     <a class="btn btn-success disabled" aria-disabled="true" data-bs-toggle="collapse"
                         href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
                         Pilih Mata Pelajaran
