--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             </div>
             <div class="card-footer">
                 <div class="text-center">
-                    <a class="btn btn-success disabled" aria-disabled="true" data-bs-toggle="collapse"
-                        href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                    <a class="btn btn-success" data-bs-toggle="collapse" href="#collapseExample" role="button"
+                        aria-expanded="false" aria-controls="collapseExample">
                         Pilih Mata Pelajaran
                     </a>
                 </div>
